--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,9 @@
     margin-left: 40px;
     margin-right: 40px;
 } */
+
+/* body{
+    background-image: url(../assets/img/backgroud.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+} */
