--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,24 @@
     padding: 0;
 }
 
+body{
+    background-image: url(/assets/img/backgroud.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100vh;
+}
+
+::-webkit-scrollbar{ 
+    width: 15px;
+    height: 3px;
+  }
+
+::-webkit-scrollbar-track {
+    background:transparent;
+    padding: 2px;
+  }
+
+  ::-webkit-scrollbar-thumb{
+    background-color: #a9a9a9;
+  }
