--- a/src/app/jogador/jogador.component.html
+++ b/src/app/jogador/jogador.component.html
@@ -43,6 +43,6 @@
       
     </ul>
   </div>
-  <div *ngIf="dataReceived" >
+  <div *ngIf="dataReceived" class="matchs">
     <app-matches [dataReceived]="dataReceived"></app-matches>
   </div>
