--- a/src/app/matches/matches.component.css
+++ b/src/app/matches/matches.component.css
@@ -1,21 +1,56 @@
-
-.matches {
-   
-    /* display: flex;
-    flex-direction: column;
+.title-matchs{
+    display: flex;
     justify-content: center;
     align-items: center;
-    left: 50%;
-    transform: translate(-50%);
+    color:antiquewhite;
+}
+
+.matchMode{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.matches {
+    margin-bottom: 100px;
+    padding-bottom: 300px;
+    list-style: none;
     width: 1215px;
-    height: 420px;
-    margin: 0;
-    */
 } 
 
-h2{
-    color: aqua;
+.mathes-info{
+    margin-bottom: 20px;
 }
+
+.matches ul{
+    margin-bottom: 50px;
+    background-color: #a9a9a9a9;
+    border-radius: 10px;
+    list-style: none;
+}
+
+.matches  .participants{
+    
+    border-bottom: solid black ;
+}
+
+.summonerName{
+    color: antiquewhite;
+    font-size: 15px;
+    width: 180px;
+    padding-left: 20px;
+}
+.championimg{
+    height: 50px;
+    margin-left: 145px;
+    border-radius: 10px;
+    margin-bottom: 0;
+}
+
+/* h2{
+    color: aqua;
+} */
 
 .participants{
     display: flex;
