--- a/src/app/jogador/jogador.component.css
+++ b/src/app/jogador/jogador.component.css
@@ -61,6 +61,23 @@
     background-color: #8B0000;
 }
 
+.loading {
+    background-image: url('../../assets/img/zed.gif');
+    position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 9999;
+    height: 300px;
+    width: 250px;
+    overflow: visible;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+  
+
 .player-info{
     position: relative;
     display: flex;
