--- a/src/app/matches/matches.component.css
+++ b/src/app/matches/matches.component.css
@@ -5,6 +5,22 @@
     color:antiquewhite;
 }
 
+.loading {
+    background-image: url('../../assets/img/zed.gif');
+    position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 9999;
+    height: 300px;
+    width: 250px;
+    overflow: visible;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+
 .matchMode{
     display: flex;
     justify-content: center;
