--- a/src/app/matches/matches.component.html
+++ b/src/app/matches/matches.component.html
@@ -2,6 +2,8 @@
 
 <div *ngIf="matchesPlayer && matchesPlayer.length" class="matches">
   <h1 class="title-matchs">Partidas recentes de {{ playerName }}</h1>
+  
+<div *ngIf="loading" class="loading"></div>
   <div *ngFor="let partidas of matchesPlayer; let i = index" class="matches-info">
     <ul>
       <li>
@@ -12,7 +14,7 @@
             <!-- <h3>Match Mode: {{matchMode.gameMode}}</h3> -->
             <h3 class="summonerName" (click)="playerNamesearch(match.summonerName)">Name:{{match.summonerName}}</h3>
             <!-- <img [src]="'https://www.mobafire.com/images/avatars/'+match.championName+'-classic.png'" alt="" class="championimg"> -->
-            <!-- <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp+'-classic.png'" alt="" > -->
+            <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp[i][j]+'-classic.png'" alt="" >
             <h3 class="championName">Champion: {{match.championName}}</h3>
             <h3 class="kda">KDA: {{match.kills}}/{{match.deaths}}/{{match.assists}}</h3>
             <!-- <h3 class="kills">kills: {{match.kills}}</h3>
@@ -20,7 +22,7 @@
             <h3 class="assists">assists: {{match.assists}}</h3> -->
             <h3 class="cs">CS: {{totalCs[i][j]}}</h3>
             <h3 class="gold">Gold per minute:{{match.challenges.goldPerMinute.toString() | number:'1.0-2'}}</h3>
-            
+            <h3></h3>
           </div>
         </div>
       </li>
