correção de erro

--- a/src/app/jogador/jogador.component.html
+++ b/src/app/jogador/jogador.component.html
@@ -38,7 +38,7 @@
       <li><span>Nome do Campeão: {{championNames[i]}}</span></li>
       <li><span>Nivél: {{champion.championLevel}}</span></li>
       <li><span>Pontos de maestria:{{champion.championPoints}}</span></li>
-      <li><span>Função: {{roleChamps[i].role}}</span></li>
+      <!-- <li><span>Função: {{roleChamps[i].role}}</span></li> -->
       
     </ul>
   </div>
