--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,39 @@
- <app-jogador></app-jogador>
+<header>
+   <h3>Shadow Search</h3>
+   <!-- <button>Sign In</button> -->
+   <!-- <img src="../assets/img/voliryze.png" alt=""> -->
+</header>
+<main>
+   <div class="banner">
+      <div class="text">
+         <h1>Saiba sobre suas Batalhas</h1>
+         <p>aqui temos um aplicativo onde você pode achar qualque jogador Brasileiro</p>
+         <a href="">Comece Agora</a>
+      </div>
+      <div class="banner-img">
+         <img src="../assets/img/voliryze.png" alt="">
+      </div>
+   </div>
+   <div class="about-it">
+      <div class="topic">
+         <div class="card-body">
+            <h2>Sobre o jogador</h2>
+            <p>Onde mostra o nome, nível e como banner o campeão que tem mais maestria.</p>
+         </div>
+      </div>
+      <div class="topic">
+         <div class="card-body">
+            <h2>Maestria</h2>
+            <p>Mostra os 10(dez) campeões com mais maestria do jogador e o nivel de maestria.</p>
+         </div>
+      </div>
+      <div class="topic">
+         <div class="card-body">
+            <h2>Partidas</h2>
+            <p>Lista as últimas 20 partidas do jogador, mostrando qual modo, os jogadores que ganharam, CS, Gold e seu
+               KDA.</p>
+         </div>
+      </div>
+   </div>
+   <app-jogador></app-jogador>
+</main>
