--- a/src/app/matches/matches.component.css
+++ b/src/app/matches/matches.component.css
@@ -1,4 +1,4 @@
-.title-matchs{
+/* .title-matchs{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,4 +91,4 @@ h3{
 
 .participants img{
     height: 50px;
-}
+} */
