--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,3 +9,176 @@
     background-size: cover;
     background-repeat: no-repeat;
 } */
+
+header {
+    background-color: #0a020e3d;
+    width: 100vw;
+    height: 100px;
+    backdrop-filter: blur(30px);
+    position: fixed;
+    z-index: 1;
+    color: #fff;
+    text-align: center;
+    font-size: 40px;
+
+}
+
+header h3{
+    position: absolute;
+    top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+}
+
+
+main .banner{
+    width: 100vw;
+    height:50vh;
+    position: relative;
+    background: linear-gradient(120deg, #4613b4, #db00ef );
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+
+.banner .text{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+}
+
+.banner .text h1{
+    font-size: 60px;
+    font-weight: bolder; 
+    background: -webkit-linear-gradient( right,  #ffffff,  #b618ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.banner .text p{
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+.banner .text a{
+    position: relative;
+    margin-top: 20px;
+    height: 50px;
+    width: 160px;
+    background-color: #fff;
+    border: none;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+    font-size: 15px;
+    -webkit-clip-path: polygon(5% 1%, 86% 0, 100% 21%, 100% 92%, 84% 100%, 6% 100%, 0 87%, 0 17%);
+    clip-path: polygon(5% 1%, 90% 0, 100% 35%, 100% 90%, 95% 100%, 7% 110%, 0% 85%, 0 17%);
+
+}
+
+
+
+.banner .banner-img{
+    position:absolute;
+    left: 60%;
+    bottom: -1vh;
+    width: 35%;    /* bottom: -80px; */
+    
+}
+
+
+.banner .banner-img img{
+    width: 100%;
+}
+
+
+.about-it{
+    position: relative;
+    display: flex;
+    /* height: 65vh; */
+    width: 100vw;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+.about-it .topic{
+    background-size: cover;
+    height: 500px; 
+    width: 400px;
+    -webkit-clip-path: polygon(85% 0, 100% 14%, 100% 100%, 0 100%, 0 0);
+    clip-path: polygon(85% 0, 100% 14%, 100% 100%, 0 100%, 0 0);
+    transition: 0.3s ease-in-out;
+    color: #fff;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-clip: content-box;
+    margin-bottom: 10px;
+}
+
+
+
+.about-it .topic:nth-child(1){
+    background-image: url("../assets/img/jinx.jpg");
+    background-position: center;
+}
+.about-it .topic:nth-child(2){
+    background-image: url("../assets/img/zed-card.jpg");
+}
+.about-it .topic:nth-child(3){
+    background-image: url("../assets/img/lulu.jpg");
+    background-position: center;
+}
+
+.about-it .topic .card-body{
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(5px);
+    background-color: #0a020e3d;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+
+
+.about-it .topic .card-body h2{
+    font-size: 40px;
+    margin-bottom: 60px;
+}
+
+
+.about-it .topic .card-body p{
+    width: 80%;
+    align-self: center;
+}
+
+
+.about-it .topic:hover .card-body{
+    opacity: 1;
+  visibility: visible;
+}
+
+
+
+main{
+    padding-bottom: 100px;
+}
+
+
+
