--- a/src/app/jogador/jogador.component.css
+++ b/src/app/jogador/jogador.component.css
@@ -1,4 +1,4 @@
-.title-search{
+/* .title-search{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +9,6 @@
 }
 
 .search-player{
-    /* margin: 0 100px 0 100px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -205,4 +204,147 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%);
+} */
+
+
+.search-player{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    width: 85vw;
+    height: 20vh;
+    background-color: #2b2a2a9a;
+    background-repeat: no-repeat;
+    backdrop-filter: blur(35px); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+
+}
+
+.search-player label{
+    font-size: 40px;
+    font-weight: bolder;
+}
+
+.search-player input{
+    height: 60px;
+    width: 250px;
+    margin: 10px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    color: #fff;
+    background-color: #2e2e2e;
+    backdrop-filter: blur(40px);
+}
+
+.search-player button {
+    width: 150px;
+    height: 40px;
+    background-color: #fff;
+    border: none;
+    border-radius: 10px;
+}
+
+
+.result{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    width: 85vw;
+    display: grid;
+    grid-template: 300px 150vh/45% 45%;
+    column-gap: 5%;
+    row-gap: 20px;
+    /* background-color: #2e2e2e; */
+}
+
+
+
+.result .player-info{
+    position: relative;
+    width: 100%;
+    height:95%;
+    grid-area: 1/1/2/2;
+    padding-bottom: 20px;
+}
+
+
+.result .player-info .profileicon{
+    position: absolute;
+    width: 20%;
+    bottom: 10px;
+    left: 10px;
+    border-radius: 15px;
+    border:1px solid #2e2e2e;
+    z-index: 1;
+}
+
+.result .player-info .summoner{
+    position: absolute;
+    bottom: 20%;
+    left:23%;
+    font-size: 40px;
+    color: #fff;
+    z-index: 1;
+}
+
+.result .player-info .level{
+    position: absolute;
+    bottom: 10%;
+    left:23%;
+    font-size: 20px;
+    color: #fff;
+    z-index: 1;
+}
+
+.result .player-info .back-player{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-radius: 15px;
+    border:1px solid #2e2e2e;
+    backdrop-filter: blur(2px);
+    z-index: 0;
+    opacity: 0.7;
+}
+
+.maestry{
+    margin-top: 10px;
+    grid-area: 2/1/3/2;
+}
+
+.maestrys{
+    position: relative;
+    width: 100%;
+    background-color: #161616bb;
+    border: 1px solid #2e2e2e;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.maestrys img{
+    width: 100px;
+    position: relative;   
+    border-radius: 10px;
+}
+
+.maestrys .info-maestry{
+    list-style: none;
+    position: absolute;
+    left: 130px;
+    color: #fff;
+    top: 50%;
+    transform: translateY(-50%);
+
+}
+
+
+.partida{
+    position: relative;
+    width: 100%;
+    grid-area: 1/2/3/3;
 }
