--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <div class="text">
          <h1>Saiba sobre suas Batalhas</h1>
          <p>aqui temos um aplicativo onde você pode achar qualque jogador Brasileiro</p>
-         <a href="">Comece Agora</a>
+         <a href="#search-player">Comece Agora</a>
       </div>
       <div class="banner-img">
          <img src="../assets/img/voliryze.png" alt="">
