--- a/src/app/jogador/jogador.component.css
+++ b/src/app/jogador/jogador.component.css
@@ -312,6 +312,16 @@
     opacity: 0.7;
 }
 
+
+.result .player-info .rank{
+    position: absolute;
+    bottom: 1%;
+    left:23%;
+    font-size: 20px;
+    color: #fff;
+    z-index: 1;
+}
+
 .maestry{
     margin-top: 10px;
     grid-area: 2/1/3/2;
@@ -347,4 +357,5 @@
     position: relative;
     width: 100%;
     grid-area: 1/2/3/3;
+    z-index: 2;
 }
