--- a/src/app/matches/matches.component.html
+++ b/src/app/matches/matches.component.html
@@ -1,51 +1,107 @@
 
 
-<!-- <div *ngIf="matchesPlayer && matchesPlayer.length" class="matches">
-  <h1 class="title-matchs">Partidas recentes de {{ playerName }}</h1>
-  
-  <div *ngIf="loading" class="loading"></div>
-  <div *ngFor="let partidas of matchesPlayer; let i = index" class="matches-info">
-    <ul>
-      <li>
-        <div *ngIf="matchinfo && matchinfo.length > i">
-          <h2 class="matchMode">{{matchMode[i]}}</h2>
-          <div *ngFor="let match of matchinfo[i];let j =index" class="participants">
-            <h3 class="summonerName" (click)="playerNamesearch(match.summonerName)">Name:{{match.summonerName}}</h3>
-            <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp[i][j]+'-classic.png'" alt="" >
-            <h3 class="championName">{{match.championName}}</h3>
-            <h3 class="kda">KDA: {{match.kills}}/{{match.deaths}}/{{match.assists}}</h3>
-            <h3 class="cs">CS: {{totalCs[i][j]}}</h3>
-            <h3 class="gold">Gold per minute:{{match.challenges.goldPerMinute.toString() | number:'1.0-2'}}</h3>
-            <h3>{{match.win ? 'won': 'lost'}}</h3>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div> -->
-
-
-
 <div *ngIf="matchesPlayer && matchesPlayer.length" class="matches">
   <h1 class="title-matchs">Partidas recentes de {{ playerName }}</h1>
-  
-  <div *ngIf="loading" class="loading"></div>
-  <div *ngFor="let partidas of matchesPlayer; let i = index" class="matches-info">
 
-        <div *ngIf="matchinfo && matchinfo.length > i">
-          <h2 class="matchMode">{{matchMode[i]}}</h2>
-          <div *ngFor="let match of matchinfo[i];let j =index" class="participants">
-            <h3 class="summonerName" (click)="playerNamesearch(match.summonerName)">Name:{{match.summonerName}}</h3>
-            <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp[i][j]+'-classic.png'" alt="" >
+
+
+<div *ngFor="let partidas of matchesPlayer; let i = index" class="matches-info">
+  <div *ngIf="matchinfo && matchinfo.length > i">
+    <h2 class="matchMode">{{matchMode[i]}}</h2>
+    <div *ngFor="let match of matchinfo[i]; let j = index" class="participants" [ngStyle]="{'background-color':match.win ? '#3CBC8D' : '#e92e2ed8' }">
+      <ng-container *ngIf="match.summonerName === playerName">
+        <div class="information" (click)="showPopup(i, j)">
+          <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp[i][j]+'-classic.png'" alt="">
+          <div class="info-text">
+            <h3 class="summonerName">Name:{{match.summonerName}}</h3>
             <h3 class="championName">{{match.championName}}</h3>
             <h3 class="kda">KDA: {{match.kills}}/{{match.deaths}}/{{match.assists}}</h3>
             <h3 class="cs">CS: {{totalCs[i][j]}}</h3>
             <h3 class="gold">Gold per minute:{{match.challenges.goldPerMinute.toString() | number:'1.0-2'}}</h3>
-            <h3>{{match.win ? 'won': 'lost'}}</h3>
           </div>
         </div>
+      </ng-container>
+    </div>
+  </div>
+
+  <div *ngIf="showPopUpFlag && clickedMatchIndex === i" class="matches-all-info" >
+    <div class="header">
+    <h2 class="matchMode">{{matchMode[clickedMatchIndex]}}</h2>
+    <a class="close" (click)="showPopUpFlag=false">X</a>
+</div>
+
+    <div class="team1">
+    <div *ngFor="let player of matchinfo[clickedMatchIndex].slice(0,5); let j = index" class="participants"  >
+      <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp[clickedMatchIndex][j]+'-classic.png'" alt="">
+
+      <h3 class="summonerName" (click)="playerNamesearch(player.summonerName)" (click)="showPopUpFlag = false">Name:{{player.summonerName}}</h3>
+      <h3 class="championName">{{player.championName}}</h3>
+      <h3 class="kda">KDA: {{player.kills}}/{{player.deaths}}/{{player.assists}}</h3>
+      <h3 class="cs">CS: {{totalCs[clickedMatchIndex][j]}}</h3>
+      <h3 class="gold">Gold per minute:{{player.challenges.goldPerMinute.toString() | number:'1.0-2'}}</h3>
+      <h3>{{player.win ? 'won': 'lost'}}</h3>
+    </div>
+    </div>
+    <div class="team2">
+    <div *ngFor="let player of matchinfo[clickedMatchIndex].slice(5,10); let j = index" class="participants1" >
+      <img [src]="'https://www.mobafire.com/images/avatars/'+picChamp[clickedMatchIndex][j]+'-classic.png'" alt="">
+
+      <h3 class="summonerName" (click)="playerNamesearch(player.summonerName)" (click)="showPopUpFlag = false">Name:{{player.summonerName}}</h3>
+      <h3 class="championName">{{player.championName}}</h3>
+      <h3 class="kda">KDA: {{player.kills}}/{{player.deaths}}/{{player.assists}}</h3>
+      <h3 class="cs">CS: {{totalCs[clickedMatchIndex][j]}}</h3>
+      <h3 class="gold">Gold per minute:{{player.challenges.goldPerMinute.toString() | number:'1.0-2'}}</h3>
+      <h3>{{player.win ? 'won': 'lost'}}</h3>
+    </div>
+    </div>
   </div>
 </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="matcheinfo" > <!-- pegar a informação -->
+  <div class="ganhadores">
+    <div class="participants"></div><!-- so se o participant tiver ganho-->
+  </div>
+  <div class="perdedores">
+    <div class="participants"></div><!-- so se o participant tiver perdido-->
+  </div>
+</div>
+
+
 
 
 
